added coverage report